syntax = "proto3";

package lynx.protobuf.plugin.db;

option go_package = "github.com/go-lynx/lynx/plugins/sql/mysql/conf;conf";

import "google/protobuf/duration.proto";

// Defines a message type for MySQL configuration.
message Mysql {
  // The driver name for the MySQL database.
  string driver = 1;
  // The data source name (DSN) for the MySQL database.
  string source = 2;
  // The minimum number of connections to maintain in the connection pool.
  int32 min_conn = 3;
  // The maximum number of connections to maintain in the connection pool.
  int32 max_conn = 4;
  // The maximum lifetime for a connection in the connection pool.
  google.protobuf.Duration max_life_time = 5;
  // The maximum idle time for a connection in the connection pool.
  google.protobuf.Duration max_idle_time = 6;
  // The maximum number of idle connections.
  int32 max_idle_conn = 7;
}